--- a/jsassist.css
+++ b/jsassist.css
@@ -41,7 +41,7 @@ body {
 }
 
 .chat_text_nickname {
-    font-family: 'Hanna', serif;
+    font-family: 'Jeju Gothic', serif;
     font-size: 18px;
     color: white;
     text-shadow: 0px 0px 4px #000000, 0px 0px 2px #000000;;
@@ -50,7 +50,7 @@ body {
 }
 
 .chat_text_message {
-    font-family: 'Hanna', serif;
+    font-family: 'Jeju Gothic', serif;
     font-size: 20px;
     color: white;
     text-shadow: 0px 0px 4px #000000, 0px 0px 2px #000000,
